# rexa

./: .gitignore  Cargo.toml  README.md  README.org  deny.toml  flake.nix
docs/: references.bib  structure.org
lib/rexa-netlayer-datastream/: Cargo.toml
lib/rexa-netlayer-datastream/src/: lib.rs  tcp.rs  unix.rs
lib/rexa-netlayer-mock/: Cargo.toml
lib/rexa-netlayer-mock/src/: lib.rs
lib/rexa-netlayer-onion/: Cargo.toml
lib/rexa-netlayer-onion/src/: lib.rs
lib/rexa-netlayers/: Cargo.toml
lib/rexa-proc/src/: input.rs  lib.rs
src/: async_compat.rs  captp.rs  lib.rs  locator.rs  netlayer.rs  vat.rs
src/captp/: io.rs  msg.rs  object.rs  session.rs
src/captp/msg/: abort.rs  handoff.rs  start_session.rs
src/captp/object/: bootstrap.rs
src/captp/session/: builder.rs  error.rs  event.rs  internal.rs  manager.rs  registry.rs  resolver.rs  traits.rs
src/vat/: actormap.rs
