[package]
name = "rexa"
version = "0.1.0"
edition = "2021"

description = "Library for object-capability networks"
readme = true
repository = "https://github.com/SignalWalker/rexa"
license = "LGPL-3.0-or-later"

categories = [ "asynchronous", "authentication", "concurrency", "cryptography", "network-programming" ]
keywords = [ "ocap", "ocapn", "object-capabilities", "goblins" ] # 'goblins' because this is based on Spritely Goblins (a guile library implementing OCapN)

[dependencies]

