[package]
name = "rexa-netlayer-onion"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
rexa = { path = "../..", version = "^0.1", features = ["tokio"] }

thiserror.workspace = true
futures.workspace = true

tokio = { version = "^1.38", features = ["parking_lot"] }

arti-client = { version = "^0.19", features = [
  "onion-service-client",
  "onion-service-service",
] }
tor-rtcompat = "^0.19"
tor-hsservice = "^0.19"
tor-cell = "^0.19"

[lints]
workspace = true
